# exhibits

./: .gitignore  Makefile  README.md  pyproject.toml
cxyz/: README.md  __init__.py  __main__.py
cxyz/cli/: README.md  __init__.py  exhibitgenerator.py
cxyz/core/: README.md  __init__.py  blueprintsserializer.py  routes.py  staticdependency.py  utils.py
cxyz/core/static/: style.css
cxyz/exhibits/: README.md  exhibits.py
cxyz/freezer/: __main__.py
docs/: CNAME  about  contact  index.html
docs/bone-and-ash/: bone-and-ash.html  index.html
docs/codex-ux-and-style-guide/: codex-ux-and-style-guide.html  codex_ux_and_style_guide.py  index.html  style.css
docs/congress/: congress.html  congress.py  index.html
docs/covid-19-gold-data/: covid_19_gold_data.py  index.html
docs/deca/: deca.html  index.html
docs/error-analysis/: error_analysis.py  index.html
docs/func-network/: README.md  func_network.py  index.html
docs/happy-place/: happy-place.html  index.html
docs/helix/: helix.py  index.html
docs/hello-labs/: hello-labs.html  hello_labs.py  index.html
docs/julius/: index.html  julius.html
docs/lines/: index.html  lines.html  lines.py
docs/loita/: index.html  loita.html  loita.py
docs/lonely/: index.html  lonely.css  lonely.html  lonely.js
docs/minnehack/: index.html  minnehack.html  minnehack.py
docs/misc/: index.html  misc.html
docs/portraits/: index.html  portraits.py
docs/redspine/: index.html  redspine.html  redspine.py
docs/static/: style.css
docs/telescope/: index.html  telescope.html
docs/timelion/: index.html  timelion.py
(+143 files in other folders)
