[tool.poetry]
name = "cxyz"
version = "0.1.0"
description = "A portfolio website."
authors = ["Conner Cowling "]
license = "N/A"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
Frozen-Flask = "^0.18"
Flask-Markdown = "^0.3"
docopt = "^0.6.2"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
